5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1679_1100.log
== TEST (2019-04-20 12:30:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
var1 = int(input("Entrada: "))

if var1 == 2:
	msg="Tartaruga"
elif var1 == 5:
	msg="Garca"
elif var1 == 10:
	msg="Arara"
elif var1 == 20:
	msg="Micro-leao-dourado"
elif var1 == 50:
	msg="Onca-pintada"
elif var1 == 100:
	msg="Garoupa"
else:
	msg="Invaálido
print("Entrada:", var1)
print("Animal:", msg)

-- ERROR:
File "XXXX", line 19
    msg="Invaálido
                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 12:31:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
var1 = int(input("Entrada: "))

if var1 == 2:
	msg="Tartaruga"
elif var1 == 5:
	msg="Garca"
elif var1 == 10:
	msg="Arara"
elif var1 == 20:
	msg="Micro-leao-dourado"
elif var1 == 50:
	msg="Onca-pintada"
elif var1 == 100:
	msg="Garoupa"
else:
	msg="Invalido
print("Entrada:", var1)
print("Animal:", msg)

-- ERROR:
File "XXXX", line 19
    msg="Invalido
                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 12:33:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
var1 = int(input("Entrada: "))

if var1 == 2:
	msg="Tartaruga"
elif var1 == 5:
	msg="Garca"
elif var1 == 10:
	msg="Arara"
elif var1 == 20:
	msg="Micro-leao-dourado"
elif var1 == 50:
	msg="Onca-pintada"
elif var1 == 100:
	msg="Garoupa"
else:
	msg="Invalido"
print("Entrada:", var1)
print("Animal:", msg)

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 12:34:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
var1 = int(input("Entrada: "))

if var1 == 2:
	msg="Tartaruga"
elif var1 == 5:
	msg="Garca"
elif var1 == 10:
	msg="Arara"
elif var1 == 20:
	msg="Micro-leao-dourado"
elif var1 == 50:
	msg="Onca-pintada"
elif var1 == 100:
	msg="Garoupa"
else:
	msg="Invalido"
print("Entrada:", var1)
print("Animal:", msg)

-- EXECUTION TIME:
0.261205
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
